--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=delichiadmin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 server.address=0.0.0.0
+
+server.servlet.context-path= /api/v1
